# cyberimmune-traffic-light

./: .gitignore  CMakeLists.txt  Dockerfile.traffic-light  Dockerfile.traffic-server  Makefile  README.md  cross-build.sh
central-server/: README.md  central-server.py  requests.rest  requests_manual.rest  requests_regulated.rest
connector/: CMakeLists.txt
connector/src/: connector.c  response-parser.c
control_system/: control_system_test.c
control_system/src/: control_system.c
control_system/test/: control_system_test.c
cross_checker/: CMakeLists.txt
cross_checker/src/: cross_checker.c
cross_controller/: CMakeLists.txt
cross_controller/src/: cross_controller.c  lights_gpio_proxy.h
diagnostics/: CMakeLists.txt
diagnostics/src/: diagnostics.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
include/: color_defs.h  crossmode_proxy.h  eventlog_proxy.h  response-parser.h
json_parser/: CMakeLists.txt
lights_gpio/: CMakeLists.txt
lights_gpio/src/: lights_gpio.c
resources/: CState.cdl  Diagnostics.edl  IState.idl
resources/cdl/: CrossControl.cdl  CrossMode.cdl  EventLog.cdl  GpioLights.cdl  LightsGpio.cdl  LightsMode.cdl  TrafficMode.cdl
resources/edl/: Connector.edl  ControlSystem.edl  CrossChecker.edl  CrossController.edl  Diagnostics.edl  LightsGPIO.edl
resources/idl/: ICrossControl.idl  ICrossMode.idl  IEventLog.idl  IGpioLights.idl  ILightsGpio.idl  ILightsMode.idl  ITrafficMode.idl
